# django-tutorial

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
mysite/: settings.py
polls/: views.py
polls/migrations/: 0001_initial.py
