[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Mahfoud R. <mahfoud_202@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
django = "5.0.3"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.25.0"

black = "24.2.0"
isort = "5.13.2"
pre-commit = "3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py312']

[tool.isort]
profile = "django"
line_length = 99

[tool.poe.tasks]
runserver = "python manage.py runserver"
startapp = "python manage.py startapp"
migrate = "python manage.py migrate"
pre-commit-install = "pre-commit install"
pre-commit = "pre-commit run --all-files"
