[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["Mahfoud R. <mahfoud_202@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
django = "5.0.3"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
runserver = "python manage.py runserver"
